@@ -190,7 +190,7 @@ public class MeshInfo {
             boolean reflecting;
             if (gtr.isRestoring()) {
                myFileTransform.set (gtr.restoreObject (myFileTransform));
-               reflecting = gtr.restoreObject (new Boolean(false));
+               reflecting = gtr.restoreObject (Boolean.valueOf(false));
             }
             else {
                AffineTransform3dBase XC =
@@ -201,7 +201,7 @@ public class MeshInfo {
                reflecting = (XC.getMatrix().determinant() < 0);
                if (gtr.isSaving()) {
                   gtr.saveObject (new AffineTransform3d(myFileTransform));
-                  gtr.saveObject (new Boolean(reflecting));
+                  gtr.saveObject (Boolean.valueOf(reflecting));
                }
                preMultiplyFileTransform (XC);
             }
@@ -231,7 +231,7 @@ public class MeshInfo {
                boolean reflecting;
                if (gtr.isRestoring()) {
                   myFileTransform.set (gtr.restoreObject (myFileTransform));
-                  reflecting = gtr.restoreObject (new Boolean(false));
+                  reflecting = gtr.restoreObject (Boolean.valueOf(false));
                }
                else {
                   // Pre-multiply myFileTransform by the local affine
@@ -244,7 +244,7 @@ public class MeshInfo {
                   reflecting = (XL.A.determinant() < 0);
                   if (gtr.isSaving()) {
                      gtr.saveObject (new AffineTransform3d(myFileTransform));
-                     gtr.saveObject (new Boolean(reflecting));
+                     gtr.saveObject (Boolean.valueOf(reflecting));
                   }
                   preMultiplyFileTransform (XL);
                }
@@ -280,7 +280,6 @@ public class MeshInfo {
       int dotSave = rtok.getCharSetting ('.');
       rtok.wordChar ('.');
 
-      // rtok.scanWord ("mesh");
       try {
          if (rtok.nextToken() == ReaderTokenizer.TT_WORD) {
             meshClassName = rtok.sval; // explicit mesh class name
@@ -401,10 +400,10 @@ public class MeshInfo {
 
    public void write (PrintWriter pw, NumberFormat fmt) throws IOException {
       if (myMesh == null) {
-         pw.println ("mesh=[ ]");
+         pw.println ("[ ]");
       }
       else {
-         pw.println ("mesh="+myMesh.getClass().getName()+"[");
+         pw.println (myMesh.getClass().getName()+"[");
          IndentingPrintWriter.addIndentation (pw, 2);
          if (!myMeshModifiedP  && myFileName != null && myFileName.length() > 0) {
             pw.println (Write.getQuotedString (myFileName));
